# nanaccel

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  getting_started.md  shaders.md
nanaccel-windows-x86_64/: grayscale.hlsl  verify.py
scratch/: check_symphonia.rs
src/: gpu_pipeline.rs  gpu_utils.rs  main.rs  mux.rs
src/commands/: audio.rs  color.rs  edit.rs  executor.rs  help.rs  info.rs  mod.rs  parser.rs  play.rs  screenshot.rs  subtitle.rs  transcode.rs  types.rs
src/commands/subcommands/: audio.rs  color.rs  edit.rs  info.rs  mod.rs  mux.rs  overlay.rs  play.rs  record.rs  screenshot.rs  shader.rs  subtitle.rs  transcode.rs
src/gpu_pipeline/: mod.rs  play.rs  record.rs  screenshot.rs  shader.rs  transcode.rs
