[package]
name = "nanaccel"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.12.0"
libloading = "0.9.0"
mp4 = "0.14.0"
nvenc = "0.1.0"
symphonia = { version = "0.6.0", features = ["all"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
] }


